# bernbot

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  rust-toolchain
.github/workflows/: nix.yml  run.yml
nix/: build.nix  common.nix
resources/: poems.txt
src/: discord.rs  harmony.rs  insults.txt  lib.rs  main.rs  poems.txt
