[package]
name = "bernbot"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "GPL3"

[dependencies]
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "parking_lot"] }
serenity = { version = "0.10", optional = true, default-features = false, features = [
    "http",
    "client",
    "cache",
    "model",
    "utils",
    "rustls_backend",
    "gateway",
    "builder",
] }
rand = "0.8"
ctrlc = { version = "3.1", features = ["termination"] }
markov = "1.1"
serde = { version = "1", features = ["derive", "rc"] }
parking_lot = { version = "0.11", features = ["serde"] }
ron = "0.6"

[features]
default = ["discord"]
discord = ["serenity"]
